--- a/6-ruiyi-liu. newhtml exercise 3 #2.html
+++ b/6-ruiyi-liu. newhtml exercise 3 #2.html
@@ -9,37 +9,86 @@
   <link rel="stylesheet" href="css/styles.css?v=1.0">
 
 <style>
+body{
+  background-color: #cceeff;
+}
 
-  h1{
-    font-family: Comic; Cursive; sans-serif;
-    color:#800000;
-  }
+.hope{
+  font-size: 70px;
+  color:#3366cc;
+  font-family: 'Bangers', cursive;
+  width:700px;
+  height:10px;
+  text-align: center;
+  position:sticky;
+  margin-top: -1200px;
+  margin-left: 200px;
+  text-decoration: underline;
 
 
-  h2{
-    font-family:Comic; Cursive; sans-serif;
-    color:#800517
-  }
 
-  h3{
-    font-family: Comic; Cursive; sans-serif;
-    color:#8C001A
-  }
+}
 
-  h4{
-    font-family: Comic; Cursive; sans-serif;
-    color:#990012
-  }
+
+div {
+  font-size: 30px;
+  font-family: 'Gloria Hallelujah', cursive;
+  width:970px;
+  height:600px;
+  text-align: justify;
+  line-height: 2;
+  margin-top:10px;
+  margin-bottom:0px;
+  margin-left: 70px;
+  margin-right: 10px;
+  position: relative;
+  float:inherit;
+  color:	#f2f2f2;
+}
+
+.people{
+  font-size: 30px;
+  font-family: 'Gloria Hallelujah', cursive;
+  width:970px;
+  height:600px;
+  line-height: 2;
+  position:relative;
+  margin-top:0px;
+  margin-bottom: 10px;
+  margin-left: 70px;
+  margin-right: 10px;
+  float:inherit;
+  text-align: justify;
+  color:#f2f2f2;
+}
+
+
+
 
 </style>
-
 </head>
 
 <body>
 
-  &nbsp;&nbsp;&nbsp;&nbsp;There’s a story in the Quran that I thought about a lot during my first <h1>eight months</h1>   &nbsp;&nbsp;&nbsp;&nbsp;in solitary confinement. In it, a group of persecuted Christians find refuge in a cave. <h2>They,</h2>   &nbsp;&nbsp;&nbsp;&nbsp;and a dog they have with them, fall into a deep sleep. <br><br><br>&nbsp;&nbsp;&nbsp;&nbsp;They wake up under the impression that they’ve taken a nap<strong>:</strong> <h3>In fact,</h3> <br><br>&nbsp;&nbsp;&nbsp;&nbsp;it’s 300 years later. <br><br>&nbsp;&nbsp;&nbsp;&nbsp;One version of the story tells of how one of them goes out to buy food — and I can only imagine how hungry they must’ve been after 300 years — and discovers that his money is &nbsp;&nbsp;&nbsp;&nbsp;obsolete now, a museum item. That’s when he realizes how long they have actually been absent.
-  <br><br><br>&nbsp;&nbsp;&nbsp;&nbsp;The hyperlink was my currency <h4>six years ago.</h4>     &nbsp;&nbsp;&nbsp;&nbsp;Stemming from the idea of the hypertext, the hyperlink provided a diversity and decentralisation that the real world lacked. The hyperlink represented the open, interconnected spirit of &nbsp;&nbsp;&nbsp;&nbsp;the world wide web — a vision that started with its inventor, Tim Berners-Lee. The hyperlink was a way to abandon centralization — all the links, lines and hierarchies — and replace them &nbsp;&nbsp;&nbsp;&nbsp;with something more distributed, a system of nodes and networks.
-  <br><br><br>&nbsp;&nbsp;&nbsp;&nbsp;Blogs gave form to that spirit of decentralization: They were windows into lives you’d rarely know much about; bridges that connected different lives to each other and thereby changed &nbsp;&nbsp;&nbsp;&nbsp;them. Blogs were cafes where people exchanged diverse ideas on any and every topic you could possibly be interested in. They were Tehran’s taxicabs writ large.
+<div>
+  There’s a story in the Quran that I thought about a lot during my first eight months in solitary confinement. In it, a group of persecuted Christians find refuge in a cave. They, and a dog they have with them, fall into a deep sleep. They wake up under the impression that they’ve taken a nap: In fact, it’s 300 years later. One version of the story tells of how one of them goes out to buy food — and I can only imagine how hungry they must’ve been after 300 years — and discovers that his money is obsolete now, a museum item. That’s when he realizes how long they have actually been absent.
+</div>
+
+<div class="people">
+  The hyperlink was my currency six years ago. Stemming from the idea of the hypertext, the hyperlink provided a diversity and decentralisation that the real world lacked. The hyperlink represented the open, interconnected spirit of the world wide web — a vision that started with its inventor, Tim Berners-Lee. The hyperlink was a way to abandon centralization — all the links, lines and hierarchies — and replace them with something more distributed, a system of nodes and networks.
+  Blogs gave form to that spirit of decentralization: They were windows into lives you’d rarely know much about; bridges that connected different lives to each other and thereby changed them. Blogs were cafes where people exchanged diverse ideas on any and every topic you could possibly be interested in. They were Tehran’s taxicabs writ large.
+
+</div>
+
+<div class="hope">
+  CLICK HERE!
+  <br>CLICK HERE!
+  <br>CLICK HERE!
+  <br>CLICK HERE!
+  <br>CLICK HERE!
+  <br>CLICK HERE!
+  <br>CLICK HERE!
+</div>
 
 </body>
 </html>
